// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SftpAccountStatusComponent should show Sftp information when LoadingLoaderSettings is false 1`] = `
<pf-sftp-account-status
  LoadingLoadersettings="false"
>
  <div
    class="row mb-2"
  >
    <div
      class="col-1 text-right font-weight-bold"
    >
      Host
    </div>
    <div
      class="col-4"
    >
      
    </div>
  </div><div
    class="row mb-2"
  >
    <div
      class="col-1 text-right font-weight-bold"
    >
      Port
    </div>
    <div
      class="col-4"
    >
      
    </div>
  </div><div
    class="row mb-2"
  >
    <div
      class="col-1 text-right font-weight-bold"
    >
      Status
    </div>
    <div
      class="col-4"
    >
      
      
      <fa-icon
        class="text-danger"
        icon="times-circle"
      />
       Not Active 
      
      
    </div>
  </div>
</pf-sftp-account-status>
`;

exports[`SftpAccountStatusComponent should show a spinner when LoadingLoaderSettings is true 1`] = `
<pf-sftp-account-status
  LoadingLoadersettings={[Function Boolean]}
>
  <div
    class="row mb-2"
  >
    <div
      class="col-1 text-right font-weight-bold"
    >
      Host
    </div>
    <div
      class="col-4"
    >
      
    </div>
  </div><div
    class="row mb-2"
  >
    <div
      class="col-1 text-right font-weight-bold"
    >
      Port
    </div>
    <div
      class="col-4"
    >
      
    </div>
  </div><div
    class="row mb-2"
  >
    <div
      class="col-1 text-right font-weight-bold"
    >
      Status
    </div>
    <div
      class="col-4"
    >
      
      <div>
        <fa-icon
          icon="spinner"
        />
      </div>
      
    </div>
  </div>
</pf-sftp-account-status>
`;

exports[`SftpAccountStatusComponent should show an active status if CompanyAutoloaderStatus is true 1`] = `
<pf-sftp-account-status
  CompanyAutoloaderStatus={[Function Boolean]}
  LoadingLoadersettings="false"
>
  <div
    class="row mb-2"
  >
    <div
      class="col-1 text-right font-weight-bold"
    >
      Host
    </div>
    <div
      class="col-4"
    >
      
    </div>
  </div><div
    class="row mb-2"
  >
    <div
      class="col-1 text-right font-weight-bold"
    >
      Port
    </div>
    <div
      class="col-4"
    >
      
    </div>
  </div><div
    class="row mb-2"
  >
    <div
      class="col-1 text-right font-weight-bold"
    >
      Status
    </div>
    <div
      class="col-4"
    >
      
      
      <span>
        <fa-icon
          class="text-success"
          icon="check-circle"
        />
         Active 
      </span>
      
      
    </div>
  </div>
</pf-sftp-account-status>
`;

exports[`SftpAccountStatusComponent should show an inactive status if CompanyAutoloaderStatus is false 1`] = `
<pf-sftp-account-status
  CompanyAutoloaderStatus="false"
  LoadingLoadersettings="false"
>
  <div
    class="row mb-2"
  >
    <div
      class="col-1 text-right font-weight-bold"
    >
      Host
    </div>
    <div
      class="col-4"
    >
      
    </div>
  </div><div
    class="row mb-2"
  >
    <div
      class="col-1 text-right font-weight-bold"
    >
      Port
    </div>
    <div
      class="col-4"
    >
      
    </div>
  </div><div
    class="row mb-2"
  >
    <div
      class="col-1 text-right font-weight-bold"
    >
      Status
    </div>
    <div
      class="col-4"
    >
      
      
      <fa-icon
        class="text-danger"
        icon="times-circle"
      />
       Not Active 
      
      
    </div>
  </div>
</pf-sftp-account-status>
`;
